Fix font being cut off at the bottom

--- a/docs/src/pages/index.module.scss
+++ b/docs/src/pages/index.module.scss
@@ -477,7 +477,7 @@
 
       font-size: 44px;
       font-weight: 400;
-      line-height: 100%;
+      line-height: normal;
       white-space: nowrap;
       text-align: center;
 
